# alakol

./: .gitmodules  .travis.yml  README.md
firmware/: Cargo.toml  README.md  memory.x
firmware/src/: 400.html  404.html  config.rs  delay.rs  display.rs  flash.rs  http.rs  index.html  io.rs  main.rs  omron_m2.rs  sensors.rs  server.rs  time.rs
hardware/: .gitignore  2SMPP-02.dcm  2SMPP-02.lib  CHANGELOG.md  README.md  alakol-cache.lib  alakol-rescue.lib  alakol.kicad_pcb  alakol.pro  alakol.sch  sym-lib-table
hardware/output/bom/: bom.csv
hardware/output/bom/interactive/: ibom.html
hardware/output/layout/dxf/: alakol-B_Cu.dxf  alakol-B_Fab.dxf  alakol-B_Mask.dxf  alakol-B_SilkS.dxf  alakol-F_Cu.dxf  alakol-F_Mask.dxf  alakol-F_Paste.dxf  alakol-F_SilkS.dxf
hardware/output/layout/gerber/: alakol-B_Cu.gbr  alakol-B_Fab.gbr  alakol-B_Mask.gbr  alakol-B_Paste.gbr  alakol-B_SilkS.gbr  alakol-Edge_Cuts.gbr  alakol-F_Fab.gbr  alakol-F_Mask.gbr  alakol-F_Paste.gbr  alakol-F_SilkS.gbr  alakol-NPTH-drl.gbr  alakol-PTH-drl.gbr  alakol.drl  drill_report.rpt
hardware/output/layout/ps/: alakol-B_Cu.ps  alakol-B_Fab.ps  alakol-B_Mask.ps  alakol-B_Paste.ps  alakol-B_SilkS.ps  alakol-Edge_Cuts.ps  alakol-F_Fab.ps  alakol-F_Mask.ps  alakol-F_Paste.ps  alakol-F_SilkS.ps
software/: .gitignore  LICENSE.md  README.md  alakol_command.py  alakol_datalogger.py  alakol_streaming_data.ipynb  profile_example.py  requirements.txt
