[package]
name = "alakol"
version = "0.1.0"
authors = ["Richard Meadows <richard@richard.fish>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-itm = "0.4.1"
panic-semihosting = "0.5.3"
nb = "0.1.2"
cortex-m-log = { version = "0.6.1", features = ["itm", "log-integration"] }
stm32h7-ethernet = { version = "0.1.0", default-features = false, features = ["phy_ksz8081r"] }
stm32h7xx-hal = { version = "0.4.0", features = ["stm32h743", "rt"] }
alloc-cortex-m = "0.4"
ssd1306 = "0.2.6"
embedded-graphics = "0.4.9"
log = "0.4.8"
httparse = { version = "1.3.4", default-features = false }
thermocouple = { version = "0.1.2", default-features = false, features = ["k-type", "f32", "extrapolate"] }
generic-array = "0.14.2"
median = { version = "0.3.1", default-features = false }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11.1", default-features = false }

[dependencies.ms5611-spi]
version = "0.2.0"
default-features = false
features = ["ms5607"]

[dependencies.smoltcp]
version = "0.6.0"
default-features = false
features = ["ethernet", "proto-ipv4", "proto-dhcpv4", "socket-tcp", "log", "socket-raw"]

[build-dependencies]
built = "0.3"

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
lto = "fat"
opt-level = 3

[features]
hardware0 = []
hardware1 = []
default = ["hardware1"]
